# parqencr

./: .devcontainer.json  .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  openssl.conf  pyproject.toml  vault.crt  vault.hcl  vault.key
src/parqencr/: main.py
